--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/estilos.css">
 
-    <title>FaztWeb/Bootstrap</title>
+    <title>FaztWeb/Bootstrap titulo modificado</title>
   </head>
   <body data-spy="scroll" data-target="#navigation" data-offset="70" position="relative">
     
