SALUDO JS AGREGADO

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="css/estilos.css">
 
     <title>FaztWeb/Bootstrap titulo modificado</title>
+
+    <script src='js/script.js'></script>
   </head>
   <body data-spy="scroll" data-target="#navigation" data-offset="70" position="relative">
     
@@ -60,7 +62,8 @@
               <div class="col-12 col-md-6 text-center justify-content-center align-self-center">
                 <h1>This is the title or a phrase relate to the product</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam necessitatibus eaque laboriosam, architecto placeat fugit vel unde ipsa!</p>
-                <a href="#" class="btn btn-outline-secondary btn-lg text-white">Read more</a>
+               <a href="#" class="btn btn-outline-secondary btn-lg text-white">Read more</a>
+               <input type="button" onclick="saludo()" value='Saludo'>
               </div>
               <div class="col-md-6 text-center justify-content-center align-self-center">
                 <img src="images/product.jpg" alt="Imagen del producto" class="img-fluid d-none d-md-block">
