Agregado parrafo en sección header

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
                 <h1>This is the title or a phrase relate to the product</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam necessitatibus eaque laboriosam, architecto placeat fugit vel unde ipsa!</p>
                 <a href="#" class="btn btn-outline-secondary btn-lg text-white">Read more</a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
               </div>
+
               <div class="col-md-6 text-center justify-content-center align-self-center">
                 <img src="images/product.jpg" alt="Imagen del producto" class="img-fluid d-none d-md-block">
               </div>
